--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Javascript lessons</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="lesson 1-7.js"></script>
+    <script src="lesson 8.js"></script>
+    <script src=""></script>
+    <script src=""></script>
+    <script src=""></script>
 </body>
 </html>
