--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Javascript lessons</title>
 </head>
 <body>
-    <script src="lesson 1-7.js"></script>
-    <script src="lesson 8.js"></script>
-    <script src=""></script>
+   <!-- <script src="lesson 1-7.js"></script>  -->
+    <!-- <script src="lesson 8.js"></script> -->
+    <script src="lesson 9.js"></script>
     <script src=""></script>
     <script src=""></script>
 </body>
