--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
    <!-- <script src="lesson 1-7.js"></script>  -->
     <!-- <script src="lesson 8.js"></script> -->
-    <script src="lesson 9.js"></script>
-    <script src=""></script>
+    <!-- <script src="lesson 9.js"></script> -->
+    <script src="lesson 10.js"></script>
     <script src=""></script>
 </body>
 </html>
