--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
    <!-- <script src="lesson 1-7.js"></script>  -->
     <!-- <script src="lesson 8.js"></script> -->
     <!-- <script src="lesson 9.js"></script> -->
-    <script src="lesson 10.js"></script>
+    <!-- <script src="lesson 10.js"></script> -->
+    <script src="lesson 11.js"></script>
     <script src=""></script>
 </body>
 </html>
