--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Javascript lessons</title>
 </head>
 <body>
-    <button onclick="onClickButton()">Press me</button>
+    <button onclick="onClickButton(this)">Press me</button>
    <!-- <script src="lesson 1-7.js"></script>  -->
     <!-- <script src="lesson 8.js"></script> -->
     <!-- <script src="lesson 9.js"></script> -->
