--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <!-- <script src="lesson 8.js"></script> -->
     <!-- <script src="lesson 9.js"></script> -->
     <!-- <script src="lesson 10.js"></script> -->
-    <script src="lesson 11.js"></script>
+    <!-- <script src="lesson 11.js"></script> -->
+    <script src="lesson 12.js"></script>
+    <script src=""></script>
+    <script src=""></script>
     <script src=""></script>
 </body>
 </html>
