--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button onclick="onClickButton(this)">Press me</button>
+    <p id="text">Text</p>
    <!-- <script src="lesson 1-7.js"></script>  -->
     <!-- <script src="lesson 8.js"></script> -->
     <!-- <script src="lesson 9.js"></script> -->
