--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <button onclick="onClickButton(this)">Press me</button>
     <p id="text">Text</p>
+
+    <span>Text 1</span>
+    <span>Text 2</span>
+    <span>Text 3</span>
+
+
+
    <!-- <script src="lesson 1-7.js"></script>  -->
     <!-- <script src="lesson 8.js"></script> -->
     <!-- <script src="lesson 9.js"></script> -->
