--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- <script src="lesson 10.js"></script> -->
     <!-- <script src="lesson 11.js"></script> -->
     <script src="lesson 12.js"></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
+    <!-- <script src=""></script> -->
+    <!-- <script src=""></script> -->
+    <!-- <script src=""></script> -->
 </body>
 </html>
