--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <!-- <script src="lesson 9.js"></script> -->
     <!-- <script src="lesson 10.js"></script> -->
     <!-- <script src="lesson 11.js"></script> -->
-    <script src="lesson 12.js"></script>
-    <!-- <script src=""></script> -->
+    <!-- <script src="lesson 12.js"></script> -->
+    <script src="lesson 13.js"></script>
     <!-- <script src=""></script> -->
     <!-- <script src=""></script> -->
 </body>
