--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <!-- <script src="lesson 10.js"></script> -->
     <!-- <script src="lesson 11.js"></script> -->
     <!-- <script src="lesson 12.js"></script> -->
-    <script src="lesson 13.js"></script>
-    <!-- <script src=""></script> -->
+    <!-- <script src="lesson 13.js"></script> -->
+    <script src="lesson 14.js"></script>
     <!-- <script src=""></script> -->
 </body>
 </html>
