JavaScript Bogdan Stashuk

--- a/index.html
+++ b/index.html
@@ -6,39 +6,7 @@
     <title>Javascript lessons</title>
 </head>
 <body>
-    <!-- <button onclick="onClickButton(this)">Press me</button> -->
-    <!-- <p id="text">Text</p> -->
-
-    <form id="main-form" onsubmit="return checkForm(this)" method="post">
-
-        <label for="name">Name:</label>
-        <input type="text" name="name" placeholder="Name" id="name"><br></br>
-        <label for="password">Mot de pass:</label>
-        <input type="password" name="pass" placeholder="Mot de pass" id="pass"><br></br>
-        <label for="repass">Verification mdp:</label>
-        <input type="password" name="repass" placeholder="Verification mdp" id="repass"><br></br>
-        <span>Sex:</span>
-        <input type="radio" name="state" id="male" value="Homme">
-        <label for="male">Homme</label>
-        <input type="radio" name="state" id="female" value="Femme">
-        <label for="female">Femme</label>
-        <span id="error" style="color: red"></span>
-        <input type="submit" name="submit" value="Ok">
-    </form>
-
-    <!-- <span class="simple">Text 1</span> -->
-    <!-- <span class="simple">Text 2</span> -->
-    <!-- <span class="simple">Text 3</span> -->
-
-
-
-   <!-- <script src="lesson 1-7.js"></script>  -->
-    <!-- <script src="lesson 8.js"></script> -->
-    <!-- <script src="lesson 9.js"></script> -->
-    <!-- <script src="lesson 10.js"></script> -->
-    <!-- <script src="lesson 11.js"></script> -->
-    <!-- <script src="lesson 12.js"></script> -->
-    <!-- <script src="lesson 13.js"></script> -->
-    <script src="lesson 14.js"></script>
+    
+    <script src="main.js"></script>
 </body>
 </html>
